style.css
:root[data-theme="light"] {
    --text: #8e0661;
    --background: #fceefa;
    --primary: #732640;
    --secondary: #f7ebd4;
    --accent: #217b9c;
    --darker-accent: #124254;
}

:root[data-theme="dark"] {
    --text: #f971cc;
    --background: #11030f;
    --primary: #d98ca6;
    --secondary: #2b1f08;
    --accent: #63bdde;
    --darker-accent: #27637b;
}

@font-face {
    font-family: "SourceCodePro";
    src: url("assets/font/SourceCodePro/SourceCodePro-VariableFont_wght.ttf");
    font-weight: 200 900;
    font-style: normal;
}

@font-face {
    font-family: "SourceCodePro";
    src: url("assets/font/SourceCodePro/SourceCodePro-Italic-VariableFont_wght.ttf");
    font-weight: 200 900;
    font-style: italic;
}

html {
    background: var(--background);
    color: var(--text);
    font-family: SourceCodePro, monospace;
    font-size: 16px;
    padding: 16px;
}

body {
    opacity: 0;
}

.fade-in {
    opacity: 1;
    transition: opacity 0.5s cubic-bezier(0.2, 0, 0, 1);
}

a,
a:visited,
a:active,
a:hover {
    color: var(--primary);
    text-decoration: none;
    font-weight: 700;
}

img#mainpic {
    width: 100%;
    height: auto;
    border-radius: 25px;
}

a:hover {
    text-decoration: underline;
}

h1 {
    color: var(--accent);
    font-size: 48px;
    text-align: center;
}

h2 {
    color: var(--primary);
    font-size: 32px;
    font-style: italic;
}

article.content {
    border-radius: 25px;
    margin: auto;
    min-width: 100px;
    max-width: 1280px;
    text-align: left;
    padding: 20px;
}

div#picker {
    display: flex;
    justify-items: center;
    justify-content: center;
    align-items: center;
    margin: 0;
    text-align: center;
}

div.footer {
    background-color: var(--primary);
    color: var(--secondary);
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 16px;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
    box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.2);
}


menu#links-menu {
    list-style-type: none;
    display: flex;
    padding: 0;
    margin: 16px 0;
    column-gap: 80px;
    flex-direction: row;
    flex-wrap: wrap;
    text-align: center;
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.43, 1.54);
}

li.navbar {
    display: inline;
    text-align: center;
    font-size: 1em;
    text-decoration: none;
    font-stretch: ultra-expanded;
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.4, 1.15);
}

li.navbar:hover {
    display: inline-block;
    letter-spacing: .5em;
    /* -webkit-transform: scale(1.5, 1); Safari and Chrome */
    /* -moz-transform: scale(1.5, 1); Firefox */
    /* -ms-transform: scale(1.5, 1); IE 9 */
    /* -o-transform: scale(1.5, 1); Opera */
    /* transform: scale(1.5, 1); W3C */
}

#navImage {
    height: 48px;
    width: 48px;
    padding: 32px;
    /* transition: all .3s cubic-bezier(0.4, 0, 1, 1); */
    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.43, 1.54);
    float: left;
}

#navImage:hover {
    height: 80px;
    width: 80px;
    padding: 16px;
}


/* Styles for buttons */
.btn {
    padding: 10px 20px;
    color: var(--text);
    background: rgba(255, 255, 255, 0.2); /* Translucent white background */
    border: none;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
    font-size: 20px;
    transition: background-color 0.3s ease, color 0.3s ease;
    margin: 10px;
    backdrop-filter: blur(5px); /* Apply a blur effect to the background */
}

/* Light theme button style */
[data-theme="light"] .btn {
    color: var(--accent); /* Change text color to match the accent color */
    background: rgba(255, 255, 255, 0.2); /* Translucent white background */
}

/* Dark theme button style */
[data-theme="dark"] .btn {
    color: var(--accent); /* Change text color to match the background color */
    background: rgba(0, 0, 0, 0.2); /* Translucent black background */
}

/* Hover effect for buttons */
.btn:hover {
    filter: brightness(0.9); /* Slight dimming on hover for all themes */
}

/* Hover effect for light theme */
[data-theme="light"] .btn:hover {
    background: rgba(255, 255, 255, 0.3); /* Slightly increase opacity on hover */
}

/* Hover effect for dark theme */
[data-theme="dark"] .btn:hover {
    background: rgba(0, 0, 0, 0.8); /* Massively increase opacity on hover */
}



/* scrollbar */
::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: var(--background);
}

::-webkit-scrollbar-thumb {
    background: var(--accent);
}

::-webkit-scrollbar-thumb:hover {
    background: var(--darker-accent);
}

